fix interchanged Title and Host

--- a/public/locales/en/events.json
+++ b/public/locales/en/events.json
@@ -1,154 +1,154 @@
 {
   "DoremyPortal": {
-    "Title": "Doremy",
-    "Host": "Tunnel of Dream"
+    "Title": "Tunnel of Dream",
+    "Host": "Doremy"
   },
   "HinaCollect": {
-    "Title": "Hina",
-    "Host": "Collect Misfortune"
+    "Title": "Collect Misfortune",
+    "Host": "Hina"
   },
   "JunkoColorless": {
-    "Title": "Junko",
-    "Host": "Purify the Light Jade"
+    "Title": "Purify the Light Jade",
+    "Host": "Junko"
   },
   "HatateInterview": {
-    "Title": "Hatate",
-    "Host": "Contemporary Communication"
+    "Title": "Contemporary Communication",
+    "Host": "Hatate"
   },
   "AssistKagerou": {
-    "Title": "Kagerou",
-    "Host": "Troubles of Being Furry"
+    "Title": "Troubles of Being Furry",
+    "Host": "Kagerou"
   },
   "BackgroundDancers": {
-    "Title": "Background Dancers",
-    "Host": "Secret God's Group Interview"
+    "Title": "Secret God's Group Interview",
+    "Host": "Background Dancers"
   },
   "KeineSales": {
-    "Title": "Keine",
-    "Host": "Three Household Treasures of the Outer World"
+    "Title": "Three Household Treasures of the Outer World",
+    "Host": "Keine"
   },
   "EternityAscension": {
-    "Title": "Eternity",
-    "Host": "Scale Powder is Approaching"
+    "Title": "Scale Powder is Approaching",
+    "Host": "Eternity"
   },
   "Debut": {
-    "Title": "Eirin",
-    "Host": "Debut"
+    "Title": "Debut",
+    "Host": "Eirin"
   },
   "SumirekoGathering": {
-    "Title": "Sumireko",
-    "Host": "Card Gathering"
+    "Title": "Card Gathering",
+    "Host": "Sumireko"
   },
   "MedicinePoison": {
-    "Title": "Medicine",
-    "Host": "Strange Garden"
+    "Title": "Strange Garden",
+    "Host": "Medicine"
   },
   "KaguyaVersusMokou": {
-    "Title": "Kaguya Mokou",
-    "Host": "'Lost Bamboo Forest: Last Wars'"
+    "Title": "'Lost Bamboo Forest: Last Wars'",
+    "Host": "Kaguya Mokou"
   },
   "WatatsukiPurify": {
-    "Title": "Toyohime",
-    "Host": "Easygoing Lunarian Messenger"
+    "Title": "Easygoing Lunarian Messenger",
+    "Host": "Toyohime"
   },
   "Supply": {
-    "Title": "Reisen",
-    "Host": "Assistance from Eientei"
+    "Title": "Assistance from Eientei",
+    "Host": "Reisen"
   },
   "RinnosukeTrade": {
-    "Title": "Rinnosuke",
-    "Host": "Item Trade"
+    "Title": "Item Trade",
+    "Host": "Rinnosuke"
   },
   "YukariProvide": {
-    "Title": "Yukari",
-    "Host": "Little Chat"
+    "Title": "Little Chat",
+    "Host": "Yukari"
   },
   "PatchouliPhilosophy": {
-    "Title": "Patchouli",
-    "Host": "Refine the Light Jade"
+    "Title": "Refine the Light Jade",
+    "Host": "Patchouli"
   },
   "RemiliaMeet": {
-    "Title": "Remilia",
-    "Host": "A Destined Reunion"
+    "Title": "A Destined Reunion",
+    "Host": "Remilia"
   },
   "RumiaDriving": {
-    "Title": "Rumia",
-    "Host": "Night Speeding"
+    "Title": "Night Speeding",
+    "Host": "Rumia"
   },
   "TewiThreat": {
-    "Title": "Tewi",
-    "Host": "Price of Luck"
+    "Title": "Price of Luck",
+    "Host": "Tewi"
   },
   "NarumiOfferCard": {
-    "Title": "Narumi",
-    "Host": "Whimsical Worship"
+    "Title": "Whimsical Worship",
+    "Host": "Narumi"
   },
   "MikeInvest": {
-    "Title": "Mike",
-    "Host": "Financial Products"
+    "Title": "Financial Products",
+    "Host": "Mike"
   },
   "KogasaSpook": {
-    "Title": "Kogasa",
-    "Host": "Horrible Umbrella"
+    "Title": "Horrible Umbrella",
+    "Host": "Kogasa"
   },
   "NazrinDetect": {
-    "Title": "Nazrin",
-    "Host": "Lost Treasure"
+    "Title": "Lost Treasure",
+    "Host": "Nazrin"
   },
   "MystiaBbq": {
-    "Title": "Mystia",
-    "Host": "Late Night Barbecue"
+    "Title": "Late Night Barbecue",
+    "Host": "Mystia"
   },
   "RingoEmp": {
-    "Title": "Ringo",
-    "Host": "Copyright Disputes Between Earth and Moon"
+    "Title": "Copyright Disputes Between Earth and Moon",
+    "Host": "Ringo"
   },
   "YachieOppression": {
-    "Title": "Yachie",
-    "Host": "Learn to Say No"
+    "Title": "Learn to Say No",
+    "Host": "Yachie"
   },
   "YorigamiSisters": {
-    "Title": "Yorigami",
-    "Host": "Jewelry Night Sale"
+    "Title": "Jewelry Night Sale",
+    "Host": "Yorigami"
   },
   "MiyoiBartender": {
-    "Title": "Miyoi",
-    "Host": "The Solitary Sommelier"
+    "Title": "The Solitary Sommelier",
+    "Host": "Miyoi"
   },
   "SatoriCounseling": {
-    "Title": "Satori",
-    "Host": "Psychological Consultation with Satori"
+    "Title": "Psychological Consultation with Satori",
+    "Host": "Satori"
   },
   "YoumuDelivery": {
-    "Title": "Youmu",
-    "Host": "Half-Human Half-Phantom House Delivery"
+    "Title": "Half-Human Half-Phantom House Delivery",
+    "Host": "Youmu"
   },
   "ParseeJealousy": {
-    "Title": "Parsee",
-    "Host": "Green-Eyed Stalker"
+    "Title": "Green-Eyed Stalker",
+    "Host": "Parsee"
   },
   "ShinmyoumaruForge": {
-    "Title": "Shinmyoumaru",
-    "Host": "Rebellion Against Rare Cards"
+    "Title": "Rebellion Against Rare Cards",
+    "Host": "Shinmyoumaru"
   },
   "FakeAdventure": {
-    "Title": "Reimu",
-    "Host": "Things Happen"
+    "Title": "Things Happen",
+    "Host": "Reimu"
   },
   "HecatiaTshirt": {
-    "Title": "Hecatia",
-    "Host": "Support Idol"
+    "Title": "Support Idol",
+    "Host": "Hecatia"
   },
   "BuduSuanming": {
-    "Title": "Mononobe no Futo",
-    "Host": "Predict the Future"
+    "Title": "Predict the Future",
+    "Host": "Mononobe no Futo"
   },
   "MikoDonation": {
-    "Title": "Toyosatomimi no Miko",
-    "Host": "Make Spell Cards Great Again"
+    "Title": "Make Spell Cards Great Again",
+    "Host": "Toyosatomimi no Miko"
   },
   "KosuzuBookstore": {
-    "Title": "Kosuzu Motoori",
-    "Host": "Rental Bookstore Suzunaan"
+    "Title": "Rental Bookstore Suzunaan",
+    "Host": "Kosuzu Motoori"
   }
 }
