add later: image

--- a/public/locales/en/site.json
+++ b/public/locales/en/site.json
@@ -53,7 +53,8 @@
       "later": [
         "Auto reflect uploaded logs to top page list",
         "Support Traditional & Simplified Chinese",
-        "Adjust UI of levels"
+        "Adjust UI of levels",
+        "Image of Vengeful Spirits, Menreikis and Spirit of Wealth/Elegance"
       ],
       "trash": [
         "Battle details",
