--- a/public/locales/ja/site.json
+++ b/public/locales/ja/site.json
@@ -53,7 +53,8 @@
       "later": [
         "アップロードした履歴の一覧への自動反映",
         "繁体字・簡体字中国語サポート",
-        "レベルのUI調整"
+        "レベルのUI調整",
+        "怨念、面霊気、神霊シリーズの画像"
       ],
       "trash": [
         "戦闘詳細",
