--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -3,5 +3,25 @@
     "line:04e7520": "「最近はよく徹夜していて、目の下にクマが出てしまったわ…」",
     "line:049c1f2": "【渡す】<h>外の世界のアイクリーム</h>を渡し、<h>境界感知機</h>を手に入れる",
     "line:06cd2f3": "【渡さない】何も起らない"
+  },
+  "Debut": {
+    "line:06f5f1b": "<l>「使える物があれば遠慮せずに持っていきなさい。」</l><br /><h>アドバンテージ</h>を一つ選んでください（第一章をクリアすれば選択肢が増えます）",
+    "line:01d41f9": "【援助】{{0}}<Money/>を得る",
+    "line:0f87a81": "【交換】初期展示品を失い、ランダムな光耀展示品を得る",
+    "line:05100b8": "【回想】三枚のランダムなアンコモンカードから一枚を選んでデッキに加える",
+    "line:097011d": "【悟り】ランダムなレアカード一枚をデッキに加える",
+    "line:02cfa2c": "【交易】全ての所持金を失う代わり、レアの展示品を一つ獲得する",
+    "line:00b97f5": "【修行】一枚のカードをアップグレードする",
+    "line:0b72af3": "【無垢】デッキから一枚カードを削除する",
+    "line:067ea40": "【転変】デッキの中からカードを一つ選び、変化させる",
+    "line:0e0ea19": "<l>「それから薬を準備してきたわ。」</l><br />貰う<h>錠剤</h>を選んでください",
+    "line:045177b": "",
+    "line:0a8b17e": "",
+    "line:0e2540a": "",
+    "line:0a20386": "",
+    "line:0d20cc9": "",
+    "line:0d59ab2": "",
+    "line:02f1bc3": "",
+    "line:04fa547": ""
   }
 }
