modify requestConfigs, entry

--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -15,13 +15,13 @@
     "line:0b72af3": "【無垢】デッキから一枚カードを削除する",
     "line:067ea40": "【転変】デッキの中からカードを一つ選び、変化させる",
     "line:0e0ea19": "<l>「それから薬を準備してきたわ。」</l><br />貰う<h>錠剤</h>を選んでください",
-    "line:045177b": "",
-    "line:0a8b17e": "",
-    "line:0e2540a": "",
-    "line:0a20386": "",
-    "line:0d20cc9": "",
-    "line:0d59ab2": "",
-    "line:02f1bc3": "",
-    "line:04fa547": ""
+    "line:045177b": "【赤色の錠剤】 {{0}} <Power />を得る",
+    "line:0a8b17e": "【青色の錠剤】 {{0}} 点の最大ライフを得る",
+    "line:0e2540a": "<l>「任務を成功させるために、好きなものを持って行って。」</l><br /><h>秘宝</h>を一つ選んでください（ Easy 難易度のボーナス）",
+    "line:0a20386": "<h>龍の頸の玉</h>を得る",
+    "line:0d20cc9": "<h>仏の御石の鉢</h>を得る",
+    "line:0d59ab2": "<h>火鼠の皮衣</h>を得る",
+    "line:02f1bc3": "<h>燕の子安貝</h>を得る",
+    "line:04fa547": "<h>蓬莱の玉の枝</h>を得る"
   }
 }
