--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -23,5 +23,12 @@
     "line:0d59ab2": "<h>火鼠の皮衣</h>を得る",
     "line:02f1bc3": "<h>燕の子安貝</h>を得る",
     "line:04fa547": "<h>蓬莱の玉の枝</h>を得る"
+  },
+  "Select": {
+    "line:005887b": "犯人の手がかりを知っている者がいるかもしれない。誰に聞けばいいだろう？<br /><br />第一章のボスとなる<h>対戦相手</h>を選択",
+    "line:07e66de": "【{{0}}】",
+    "line:01fb81d": "【{{0}}】",
+    "line:02a4885": "【{{0}}】",
+    "line:0f2a3b5": "【ランダムな対戦相手】{{0}}<Power />を得る。"
   }
 }
