--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -30,5 +30,12 @@
     "line:01fb81d": "【{{0}}】",
     "line:02a4885": "【{{0}}】",
     "line:0f2a3b5": "【ランダムな対戦相手】{{0}}<Power />を得る。"
+  },
+  "Supply": {
+    "line:032ca60": "「お疲れ様、お師匠様から補給物資を持っていくよう頼まれたの」",
+    "line:0ddbdec": "【これ】<h>{{0}}</h>を得る",
+    "line:0a82591": "【それ】<h>{{0}}</h>を得る",
+    "line:0671234": "【全部ほしい】<h>{{0}}</h>と<h>{{1}}</h>を得る",
+    "line:0e1d069": "【立ち去る】何も起こらない"
   }
 }
