--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -44,5 +44,16 @@
     "ShopRemovePrice": "{{0}}<Money />",
     "UpgradeService": "カード強化：",
     "ShopUpgradePrice": "{{0}}<Money />"
+  },
+  "RinnosukeTrade": {
+    "line:03aa37a": "「要らなくなった道具があれば回収するよ」",
+    "line:01e38f2": "【取引】<h>{{0}}</h>を売って、 {{1}} <Money />を得る",
+    "line:0de0aae": "【無効】売れるものがない",
+    "line:06c2fe7": "【取引】<h>{{0}}</h> を売って、 {{1}} <Money />を得る",
+    "line:0cc8782": "【無効】売れるものがない",
+    "line:053c5be": "【立ち去る】何も起こらない",
+    "line:0bb144b": "「君の役に立つものと交換しないか」",
+    "line:00db216": "【取引に合意】<h>{{0}}</h>を渡し、<h>{{1}}</h>を受け取る",
+    "line:0431aa2": "【立ち去る】何も起こらない"
   }
 }
