--- a/public/locales/ja/site.json
+++ b/public/locales/ja/site.json
@@ -18,7 +18,9 @@
         "言語切り替え",
         "バージョン切り替え（v1.5.1以降）",
         "画像、設定、テキスト",
-        "ダークモード対応"
+        "ダークモード対応",
+        "正邪戦闘詳細",
+        "イベント以外のマス（Mod、サイト）"
       ],
       "mod": [
         "キャラ情報",
@@ -43,8 +45,7 @@
     },
     "categories": {
       "now": [
-        "正邪戦闘詳細（Mod、サイト）",
-        "戦闘以外（イベント、ショップなど）のマス（Mod、サイト）"
+        "イベントマス（Mod、サイト）"
       ],
       "next": [
         "Mod公開",
