--- a/public/locales/ja/site.json
+++ b/public/locales/ja/site.json
@@ -18,9 +18,7 @@
         "言語切り替え",
         "バージョン切り替え（v1.5.1以降）",
         "画像、設定、テキスト",
-        "ダークモード対応",
-        "正邪戦闘詳細",
-        "イベント以外のマス（Mod、サイト）"
+        "ダークモード対応"
       ],
       "mod": [
         "キャラ情報",
@@ -31,7 +29,9 @@
         "カードの提示（イベントやショップを除く）、獲得、削除、アップグレード履歴",
         "HP/最大HP、P/最大P、金の変動",
         "敵エンカウント（名前とターン数のみ）",
-        "イベントの名前と選択肢の記録"
+        "イベントの名前と選択肢の記録",
+        "正邪戦の詳細",
+        "イベント以外のマス"
       ]
     }
   },
