--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -55,5 +55,11 @@
     "line:0bb144b": "「君の役に立つものと交換しないか」",
     "line:00db216": "【取引に合意】<h>{{0}}</h>を渡し、<h>{{1}}</h>を受け取る",
     "line:0431aa2": "【立ち去る】何も起こらない"
+  },
+  "DoremyPortal": {
+    "line:0af435d": "「もし彼女を早く見つけたいなら、ここに近道がありますよ」",
+    "line:0891a52": "【ポータルに入る】<h>境界感知器</h>を入手し、直接ボス戦を開始する",
+    "line:0f1da28": "【夢の世界で宝探し】ランダムな展示品と {{0}} <Money />を得る。厄災：<h>迷幻</h>",
+    "line:0298994": "【立ち去る】何も起こらない"
   }
 }
