WIP mana convert

--- a/public/locales/en/dialogues.json
+++ b/public/locales/en/dialogues.json
@@ -61,5 +61,17 @@
     "line:0891a52": "[Use Tunnel] Start boss fight immediately. Gain <h>Border Sensor</h>.",
     "line:0f1da28": "[Search for Treasure] Gain a random Exhibit and {{0}} <Money />, gain Misfortune: <h>Psychedelic</h>.",
     "line:0298994": "[Leave] Nothing happens."
+  },
+  "JunkoColorless": {
+    "line:0632b2f": "\"Allow me and my powers of purification to assist you in controlling them.\"",
+    "line:0a3fe27": "[Accept] {{0}}",
+    "line:0833aaf": "Select one colored mana from the mana base and convert it into two colorless mana.",
+    "line:04e31e3": "[Refuse] Nothing happens."
+  },
+  "PatchouliPhilosophy": {
+    "line:0b23fed": "\"What a coincidence, {{0}}. I can help tune your affinity with these jewels.\"<br />(A more than sufficient test subject.)",
+    "line:01cdad3": "[Accept] {{0}}",
+    "line:07acb35": "Choose a colored base mana, and convert it into Philosopher''s Mana.",
+    "line:04eeb1a": "[Refuse] Nothing happens."
   }
 }
