--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -61,5 +61,17 @@
     "line:0891a52": "【ポータルに入る】<h>境界感知器</h>を入手し、直接ボス戦を開始する",
     "line:0f1da28": "【夢の世界で宝探し】ランダムな展示品と {{0}} <Money />を得る。厄災：<h>迷幻</h>",
     "line:0298994": "【立ち去る】何も起こらない"
+  },
+  "JunkoColorless": {
+    "line:0632b2f": "「私の純化の力で、マナの力を司るのを手伝ってやろうぞ」",
+    "line:0a3fe27": "【お言葉に甘えて】{{0}}",
+    "line:0833aaf": "単色のマナ1点を無色のマナ2点へ転換する",
+    "line:04e31e3": "【遠慮する】何も起こらない"
+  },
+  "PatchouliPhilosophy": {
+    "line:0b23fed": "「{{0}}、偶然ね。この宝珠との親和性を調整するのを手伝ってあげるわ。」<br />（丁度いい実験台ね）",
+    "line:01cdad3": "【お言葉に甘えて】{{0}}",
+    "line:07acb35": "単色のマナ1点を彩色のマナ1点へ転換する",
+    "line:04eeb1a": "【遠慮する】何も起こらない"
   }
 }
