--- a/public/locales/en/enemies.json
+++ b/public/locales/en/enemies.json
@@ -22,6 +22,7 @@
   "Siji": "Eiki Shiki",
   "Doremy": "Doremy",
   "Reimu": "Reimu Hakurei",
+  "Reimu_short": "Reimu",
   "Marisa": "Marisa Kirisame",
   "Sakuya": "Sakuya Izayoi",
   "Cirno": "Cirno",
