add character short, color

--- a/public/locales/en/enemies.json
+++ b/public/locales/en/enemies.json
@@ -24,9 +24,13 @@
   "Reimu": "Reimu Hakurei",
   "Reimu_short": "Reimu",
   "Marisa": "Marisa Kirisame",
+  "Marisa_short": "Marisa",
   "Sakuya": "Sakuya Izayoi",
+  "Sakuya_short": "Sakuya",
   "Cirno": "Cirno",
+  "Cirno_short": "Cirno",
   "Koishi": "Koishi Komeiji",
+  "Koishi_short": "Koishi",
   "Long": "Megumu Iizunamaru",
   "Tianzi": "Tenshi Hinanawi",
   "Sanae": "Sanae Kochiya",
