--- a/public/locales/ja/enemies.json
+++ b/public/locales/ja/enemies.json
@@ -22,10 +22,15 @@
   "Siji": "四季映姫",
   "Doremy": "ドレミー",
   "Reimu": "博麗霊夢",
+  "Reimu_short": "霊夢",
   "Marisa": "霧雨魔理沙",
+  "Marisa_short": "魔理沙",
   "Sakuya": "十六夜咲夜",
+  "Sakuya_short": "咲夜",
   "Cirno": "チルノ",
+  "Cirno_short": "チルノ",
   "Koishi": "古明地こいし",
+  "Koishi_short": "こいし",
   "Long": "飯綱丸龍",
   "Tianzi": "比那名居天子",
   "Sanae": "東風谷早苗",
