add MiyoiBartender, TComponents

--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -69,7 +69,7 @@
     "line:04e31e3": "【遠慮する】何も起こらない"
   },
   "PatchouliPhilosophy": {
-    "line:0b23fed": "「{{0}}、偶然ね。この宝珠との親和性を調整するのを手伝ってあげるわ。」<br />（丁度いい実験台ね）",
+    "line:0b23fed": "「<Player />、偶然ね。この宝珠との親和性を調整するのを手伝ってあげるわ。」<br />（丁度いい実験台ね）",
     "line:01cdad3": "【お言葉に甘えて】{{0}}",
     "line:07acb35": "単色のマナ1点を彩色のマナ1点へ転換する",
     "line:04eeb1a": "【遠慮する】何も起こらない"
