remove u-flex-br

--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -73,5 +73,14 @@
     "line:01cdad3": "【お言葉に甘えて】{{0}}",
     "line:07acb35": "単色のマナ1点を彩色のマナ1点へ転換する",
     "line:04eeb1a": "【遠慮する】何も起こらない"
+  },
+  "MiyoiBartender": {
+    "line:0868bad": "（鯢呑亭って…確か夜にやっている妖怪向けの居酒屋だったけ）",
+    "line:061da42": "【一升瓶を注文】展示品<h>{{0}}</h>入手し、デッキからカード一枚を取り除く",
+    "line:018cd9a": "【酒量で勝負する】{{0}}の<Money />と二つの厄災<h>{{1}}</h>を得る",
+    "line:0bea743": "【一口だけ】ランダムな敵と戦い、レアの展示品をひとつ手に入る",
+    "line:0b0300d": "「うわっ！これを受け取って、秘密にしてください。」",
+    "line:0b3a02b": "【許す】展示品<h>{{0}}</h>を得る",
+    "line:0d8166c": "【断る】何も起こらない"
   }
 }
