--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -82,5 +82,16 @@
     "line:0b0300d": "「うわっ！これを受け取って、秘密にしてください。」",
     "line:0b3a02b": "【許す】展示品<h>{{0}}</h>を得る",
     "line:0d8166c": "【断る】何も起こらない"
+  },
+  "SumirekoGathering": {
+    "line:0977eb5": "「レアカードを交換しましょ、持っていなかったら、相応の値段でもいいよー」",
+    "line:022ef50": "【交換】<h>{{0}}</h>を三枚のレアカードの内一枚と交換する",
+    "line:0d7f696": "【無効】交換できるレアカードを持っていない",
+    "line:07a7bdc": "【取引】 {{0}} <Money />支払い、三枚のレアカードの内一枚を購入する",
+    "line:00120ec": "【無効】<Money />不足",
+    "line:046c8a9": "【立ち去る】何も起こらない",
+    "line:04c2389": "「この高級化粧品と交換してもらえない？抽選で当たったけど、若いから要らないのよね」",
+    "line:0ed2833": "【取引】<h>{{0}}</h>を渡し、<h>{{1}}</h>を得る",
+    "line:06cd2f3": "【立ち去る】何も起こらない"
   }
 }
