--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -93,5 +93,12 @@
     "line:04c2389": "「この高級化粧品と交換してもらえない？抽選で当たったけど、若いから要らないのよね」",
     "line:0ed2833": "【取引】<h>{{0}}</h>を渡し、<h>{{1}}</h>を得る",
     "line:06cd2f3": "【立ち去る】何も起こらない"
+  },
+  "ShinmyoumaruForge": {
+    "line:04566b1": "「<Player />、今こそ『打ち出の小槌（こづち）』を使ってレアカードに下剋上する時よ！」",
+    "line:04e318b": "【大きくなあれ】基本カードを{{0}}枚選んでアップグレードする",
+    "line:009a2f1": "【小さくなあれ】デッキから基本カード以外のカードを一枚削除する",
+    "line:0bb82a2": "【変化させる】{{0}}枚の基本カードをコモンカードに変化させる。最大ライフを {{1}} 失う",
+    "line:08c142c": "【立ち去る】何も起こらない"
   }
 }
