--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -100,5 +100,11 @@
     "line:009a2f1": "【小さくなあれ】デッキから基本カード以外のカードを一枚削除する",
     "line:0bb82a2": "【変化させる】{{0}}枚の基本カードをコモンカードに変化させる。最大ライフを {{1}} 失う",
     "line:08c142c": "【立ち去る】何も起こらない"
+  },
+  "WatatsukiPurify": {
+    "line:05fe9e1": "「八意様の助手じゃない、私も少し手を貸すわ」",
+    "line:0220408": "【神々の助けを求める】最大ライフを {{0}} 失い，二枚の<h>{{1}}</h>を得る",
+    "line:015cd2b": "【桃を食べる】最大ライフ {{0}} を得る、厄災：<h>{{1}}</h>",
+    "line:0c671d8": "【協力を断る】何も起こらない"
   }
 }
