--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -106,5 +106,13 @@
     "line:0220408": "【神々の助けを求める】最大ライフを {{0}} 失い，二枚の<h>{{1}}</h>を得る",
     "line:015cd2b": "【桃を食べる】最大ライフ {{0}} を得る、厄災：<h>{{1}}</h>",
     "line:0c671d8": "【協力を断る】何も起こらない"
+  },
+  "YorigamiSisters": {
+    "line:0e93370": "「元値 100 <Money />の宝珠だけど、初回購入特典で <hg>{{0}}%</hg> 引きよ～」",
+    "line:035fe0b": "【買ってみる】 {{0}} <Money />支払い、カードを得る：<h>{{1}}</h>",
+    "line:03a90b9": "【拒否する】 {{0}} <Money />支払うか、または厄災：<h>{{1}}</h>",
+    "line:09653e9": "「こんな哀れな貧乏人を懲らしめていいのかな？まあ別に悪いことではないだろうけど」",
+    "line:027fc29": "【勘弁して】 {{0}} <Money />支払う",
+    "line:08ee578": "【お金はない】厄災：<h>{{0}}</h>"
   }
 }
