--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -114,5 +114,15 @@
     "line:09653e9": "「こんな哀れな貧乏人を懲らしめていいのかな？まあ別に悪いことではないだろうけど」",
     "line:027fc29": "【勘弁して】 {{0}} <Money />支払う",
     "line:08ee578": "【お金はない】厄災：<h>{{0}}</h>"
+  },
+  "HatateInterview": {
+    "line:0fed9a3": "「<Player />、インタビューを受けてもらえるかしら？」",
+    "line:0ffc3c5": "【承諾する】質問に答える",
+    "line:0b1bfc1": "【取材拒否】何も起こらない",
+    "line:0f1ab7b": "「<Player />、なぜこの事件を解決するために動こうと思ったの？」",
+    "line:0c26759": "【異変を解決するため】<h>{{0}}</h>を得る",
+    "line:01f1aca": "【当然お金のため】<h>{{0}}</h>と、 {{1}} <Money />を得る",
+    "line:018ba4d": "【よくわからない】<h>{{0}}</h>を得る、厄災：<h>{{1}}</h>",
+    "line:0680a62": "【輝夜のために】<h>{{0}}</h>を得て、ライフを {{1}} 回復する"
   }
 }
