--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -124,5 +124,11 @@
     "line:01f1aca": "【当然お金のため】<h>{{0}}</h>と、 {{1}} <Money />を得る",
     "line:018ba4d": "【よくわからない】<h>{{0}}</h>を得る、厄災：<h>{{1}}</h>",
     "line:0680a62": "【輝夜のために】<h>{{0}}</h>を得て、ライフを {{1}} 回復する"
+  },
+  "HinaCollect": {
+    "line:0183740": "「その厄、私が代わりに引き受けましょうか？」",
+    "line:02dcea4": "【はい】すべての<h>厄災</h>カードを取り除く",
+    "line:00dc670": "【雛を抱きしめる】ランダムな<h>厄災</h>カード一枚を手に入れる",
+    "line:0a76aa4": "【遠慮する】何も起こらない"
   }
 }
