--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -130,5 +130,10 @@
     "line:02dcea4": "【はい】すべての<h>厄災</h>カードを取り除く",
     "line:00dc670": "【雛を抱きしめる】ランダムな<h>厄災</h>カード一枚を手に入れる",
     "line:0a76aa4": "【遠慮する】何も起こらない"
+  },
+  "KogasaSpook": {
+    "line:02f382c": "「うらめしやー！」",
+    "line:03bbd9d": "【小傘に合わせる】カード二枚をアップグレードする。厄災：<h>{{0}}</h>",
+    "line:04a4454": "【小傘を倒す】何も起こらない"
   }
 }
