--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -135,5 +135,19 @@
     "line:02f382c": "「うらめしやー！」",
     "line:03bbd9d": "【小傘に合わせる】カード二枚をアップグレードする。厄災：<h>{{0}}</h>",
     "line:04a4454": "【小傘を倒す】何も起こらない"
+  },
+  "KosuzuBookstore": {
+    "line:0150d96": "「貸本屋鈴奈庵へようこそ！気になる本はありませんか？」",
+    "line:0b70964": "【この本】<h>{{0}}</h>を得る",
+    "line:04432b2": "【その本】<h>{{0}}</h>を得る",
+    "line:09f57d5": "【下の本】<h>{{0}}</h>を得る",
+    "line:0dccd45": "【立ち去る】何も起こらない",
+    "line:09d3e76": "「はい！貸出金として<Money />{{0}}、または他の本の返却をお願いします！」",
+    "line:096ea9d": "【支払う】{{0}}<Money />失う",
+    "line:0d2b81d": "【返却】<h>{{0}}</h>を失う",
+    "line:07162cf": "【無効】他の本を持っていない",
+    "line:02e54df": "【返却】<h>{{0}}</h>を失う",
+    "line:02c51dc": "【返却】<h>{{0}}</h>を失う",
+    "line:07f1497": "【返却】<h>{{0}}</h>を失う"
   }
 }
