--- a/public/locales/ja/dialogues.json
+++ b/public/locales/ja/dialogues.json
@@ -149,5 +149,17 @@
     "line:02e54df": "【返却】<h>{{0}}</h>を失う",
     "line:02c51dc": "【返却】<h>{{0}}</h>を失う",
     "line:07f1497": "【返却】<h>{{0}}</h>を失う"
+  },
+  "NarumiOfferCard": {
+    "line:0a28cc1": "彼女を拝むと幸運に恵まれるだろうか？",
+    "line:08162bb": "カード一枚を供えて、報酬を得る",
+    "line:0e989ef": "成美は小さな拳で<Player />の胸を叩く",
+    "line:0ff3d42": "【続く】ライフ{{0}}を失う",
+    "line:0502c7d": "成美は<Player />に微笑んでいる",
+    "line:079a650": "【続く】最大ライフ{{0}}を回復",
+    "line:0d02cdc": "成美は<Player />に微笑みながら、魔法で彼女の傷を治療した",
+    "line:0f9e764": "【続く】ライフ{{0}}％を回復し、最大ライフ{{1}}を得る",
+    "line:07aab8f": "成美は<Player />に微笑みながら，魔法で彼女を晴れやかにした。",
+    "line:0cc67e1": "【続く】ライフを全回復し、最大ライフ{{0}}を得る"
   }
 }
